tests/errors/test_31.x
// Attempt to use an array as a scalar

let array: int[] = [1, 2, 3, 4, 5, 6];

fn main() -> int {

    let x: int = array;

}